[metadata]
name = mds-agency-validator
version = 0.dev
author = Polyconseil
author_email = opensource+mds-agency-validator@polyconseil.fr
url = http://github.com/Polyconseil/mds-agency-validator
description = HTTP validator for MDS Agency API
long_description = file: README.rst
long_description_content_type= text/x-rst
keywords = smartcity mobility
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: ????
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Other/Nonlisted Topic
    Framework :: Flask

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    flask
    cerberus
    pyyaml
    pyjwt

[options.extras_require]
dev =
    black
    flake8
    ipdb
    pytest
    requests-mock
    zest.releaser[recommended]
    polydev.github
    tox
    isort
    pylint
    readme_renderer # for `setup.py check --restructuredtext`
    sphinx
    sphinx_rtd_theme

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[zest.releaser]
create-wheel = yes
version-levels = 3

[distutils]
index-servers = pypi
